Issue #2210083 by cgalli: Fixed language filters break around color legends on small screens.

--- a/ui/css/tmgmt_ui.admin.css
+++ b/ui/css/tmgmt_ui.admin.css
@@ -191,3 +191,6 @@ table.tmgmt-ui-review tbody th {
   clear: both;
 }
 
+.view-tmgmt-node-source-overview .view-filters, .tmgmt-sources-wrapper {
+  margin-right: 310px;
+}
